fix Config file APis

--- a/APIs_Accounts_Credentials.cfg
+++ b/APIs_Accounts_Credentials.cfg
@@ -3,9 +3,9 @@ api_key="NzUzNTUwNjI0ZjQ4MzkzMTRiNTk2MjMyNDc1="
 Username = "Youness"
 Password="Younss99"
 [Nexmo_api]
-api_key = "37063557"
-secret_key = "eVxcCBmiJ50OZRnB"
-sender = "Youness OpenCfg"
+api_key = 37063557
+secret_key = eVxcCBmiJ50OZRnB
+sender = Youness OpenCfg
 ["Twillo"]
 api_key="your-generated-key"
 Username = "your Username"
