all Providers added

--- a/APIs_Accounts_Credentials.cfg
+++ b/APIs_Accounts_Credentials.cfg
@@ -1,11 +1,13 @@
-[TextLocal_api]
+[TextLocal]
 api_key="NzUzNTUwNjI0ZjQ4MzkzMTRiNTk2MjMyNDc1="
-Username = "Youness"
-Password="Younss99"
+sender = "Dofus"
 [Nexmo_api]
 api_key = 37063557
 secret_key = eVxcCBmiJ50OZRnB
 sender = Youness OpenCfg
-["Twillo"]
-api_key="your-generated-key"
-Username = "your Username"
+[Twillo]
+account_sid="your-generated-key"
+token_key = "your-token-key"
+Twillo_number = "your Twillo number"
+[textbelt]
+api_key = "your-generated-key"
