Error Handling Requests sending

--- a/APIs_Accounts_Credentials.cfg
+++ b/APIs_Accounts_Credentials.cfg
@@ -1,6 +1,6 @@
-[TextLocal]
-api_key="NzUzNTUwNjI0ZjQ4MzkzMTRiNTk2MjMyNDc1="
-sender = "Dofus"
+[Textlocal]
+api_key=NzUzNTUwNjI0ZjQ4MzkzMTRiNTk2MjMyNDc1=
+sender = Dofus
 [Nexmo_api]
 api_key = 37063557
 secret_key = eVxcCBmiJ50OZRnB
