all code done now Doc

--- a/src/APIs_Accounts_Credentials.cfg
+++ b/src/APIs_Accounts_Credentials.cfg
@@ -1,7 +1,7 @@
 [Textlocal]
 api_key=NzUzNTUwNjI0ZjQ4MzkzMTRiNTk2MjMyNDc1=
 sender = Dofus
-[Nexmo_api]
+[Nexmo]
 api_key = 37063557
 secret_key = eVxcCBmiJ50OZRnB
 sender = Youness OpenCfg
